# BINF6000_Assignment_1

./: MaLS_updated.fa  MalS.aln  MalS.fa  MalS_alignment_visualization.html  README.md  assessment.ipynb  dao.aln  dao.fa  dao_best.html  fail.fa  guide.py  pyproject.toml  select.aln  select.fa  select.nwk  select_alignment.html  sugars.csv
